#107-SetView reduced move visualizer to avoid overlapping into difference value

--- a/santa-fe/src/app/modules/structure/components/portfolio-breakdown-row.component.scss
+++ b/santa-fe/src/app/modules/structure/components/portfolio-breakdown-row.component.scss
@@ -72,7 +72,7 @@ $portfolioBreakdownRowBtnMinHeight: 2.25rem;
     align-items: center;
     &-moveVisualizer {
       display: flex;
-      flex: 1 1 auto;
+      flex: 0 1 90%;
       &>move-visualizer {
         flex: 1 1 auto;
       }
